--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,7 @@
 	
 	.container {
   display: flex;
+  flex-wrap: wrap;
   grid-gap: 10px;  /* Simply adjust this value !*/
   grid-template-columns: repeat(3, 1fr); /* OR grid-template-columns: 1fr 1fr 1fr;*/
   grid-auto-rows: 1fr; 
@@ -15,20 +16,32 @@
 }
 
 .container > div:nth-child(1) {
-  width: 14%;
+	background-color: #242582;
+	 border-radius: 20px;
+  width: 17%;
+  padding-bottom: 20px;
+  margin-right: 30px;
+  margin-top: 20px;
   }
 
 .container > div:nth-child(2) {
-  flex-grow: 2;
+  margin-right: 30px;
+  width: 60%;
+  padding-bottom: 20px;
+  margin-right: 30px;
   }
 
 .container > div:nth-child(3) {
-  width: 20%;
+ background-color: #242582;
+ border-radius: 20px;	
+  width: 18%;
+  padding-bottom: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
  }
 
 .container>div {
-	width: 60%;
-   height: 80%;
+	height: 100%;
 }
 
 #disponiveis {
@@ -36,6 +49,8 @@
 	padding: 0px;
 	height: 0px;
 	width: 80%;
+	background-color:white;
+	text-align: center;
 	margin: auto;
 	display: none; /* esconde a tabela por padrão */
 }
@@ -46,13 +61,14 @@
 
 
 		h1 {
-			background-color: blue;
+			background-color: #2F2FA2;
 			text-align: center;
 			clear: both;
 			color: white;
         font-size: 48px;
         padding-bottom: 20px;
         line-height: 20px;
+        margin-bottom:20px;
 		}
 		
 		h1 img {
@@ -61,12 +77,23 @@
     margin-bottom: 10px; /* adiciona uma margem inferior para separar a imagem do texto */
 }
 		
+		h2 {
+			background-color: #242582;
+			text-align: center;
+			color: white;
+			border-radius: 20px;
+			padding-bottom: 20px;
+			padding-top: 20px;
+			
+        
+		}
 
 		label, input [type="date"] {
 			display: block;
 			margin-bottom: 0px;
 			text-align: center;
 			padding: 0px;
+			color: white;
 			}
 			
 			select {
@@ -105,7 +132,6 @@
 
 	<h1><img src="/images/imagemGado.png" width="120px" height="120px">CONTROLE DE GADO</h1>
 	
-
 	
 <div class="container">
   	<div>
@@ -136,20 +162,21 @@
 	</div>
 		
   <div>
-  <h2>Listar todos os animais</h2>
-  <button onclick="consultarTotalAnimais()">Listar animais</button>
+  
+  <h2>Listar todos os animais
   <p></p>
-
+  <button onclick="consultarTotalAnimais()">Listar animais</button></h2>
+  
   <table align="center" id="tabelaAnimais">
     <thead>
       <tr>
         <th width="100px">Nº do Produtor</th>
-        <th width="200px">Nº do Animal</th>
-        <th width="200px">Nome do Animal</th>
-        <th width="200px">Data de nascimento</th>
-        <th width="200px">Peso</th>
-        <th width="200px">Nº da Propriedade</th>
-        <th width="200px">Editar/Excluir</th>
+        <th width="150px">Nº do Animal</th>
+        <th width="150px">Nome do Animal</th>
+        <th width="150px">Data de nascimento</th>
+        <th width="150px">Peso</th>
+        <th width="150px">Nº da Propriedade</th>
+        <th width="150px">Editar/Excluir</th>
       </tr>
       <tr>
         <th><input type="text" id="filtroProdutor" class="filtro" placeholder="Filtrar"></th>
@@ -178,14 +205,14 @@
 			
 			<tr>
 				<td>
-					<p id="qtdCabeças"></p>
+					<b><p id="qtdCabeças"></p></b>
 				</td>
 			</tr>
 			 
 		 
 			<tr>
 				<td>
-					<p id="qtdVitelos"></p>
+					<b><p id="qtdVitelos"></p></b>
 				</td>
 			</tr>
 		</table>
