--- a/src/main/resources/static/consulta.html
+++ b/src/main/resources/static/consulta.html
@@ -89,7 +89,7 @@
 }*/
 
 #consulta{
- background-color: #006400;
+ background-color: #223b48;
   text-align:center;
   border-radius: 20px;
   width: 25%;
@@ -139,7 +139,7 @@
 }
 		
 		h2 {
-			background-color: #006400;
+			background-color: #223b48;
 			text-align: center;
 			color: white;
 			border-radius: 20px;
@@ -157,7 +157,7 @@
         padding-top: 20px;
         padding-bottom: 0px;
         line-height: 0px;
-        margin-bottom:0px;
+        margin-bottom:20px;
         width: auto;
         margin-left: auto;
         margin-right: auto;
@@ -300,6 +300,7 @@ h5{
 
 
 .ticker {
+	line-height:15px;
   overflow: hidden;
   display: flex;
   width: 100vw;
@@ -311,7 +312,7 @@ h5{
   text-align:center;
 }
 .ticker:hover .ticker__list {
-  animation-play-state: infinite linear;
+	animation-play-state: infinite linear;
 }
 .ticker__item {
 	border: 1px solid #e9e9e9;
@@ -324,6 +325,25 @@ h5{
   100% {
     transform: translateX(-100vw); /*try changing this to -100vw*/
   }
+}
+span{
+	color:#424242;
+}
+h7{ 
+	height:40px;
+	width:95px;
+	background:	#223b48;
+	color:	#223b48;
+	position:absolute;
+}
+h8{ 
+	
+	height:40px;
+	width:95px;
+	background:	#223b48;
+	color:	#223b48;
+	position:absolute;
+	right: 0;
 }
 
   
@@ -413,18 +433,30 @@ setInterval(updateCurrencyPrices, 60000); // 60 segundos em milissegundos
 	
 	<h3><div id="area-menu">
 			<a href="index.html">Home</a>  
-			<a href="cadastro.html">Cadastrar Animal</a>
-			<a href="consulta.html">Consultar animais disponíveis</a>
-			<a href="listaAnimais.html">Animais</a>
+			<a href="cadastro.html">Cadastro de Animais</a>
+			<a href="listaAnimais.html">Listar Animais</a>
+			<a href="consulta.html">Disponibilidade de Animais</a>
 		</div>
 	</h3>
 	
-	<h4>
-	<div class="ticker">
-    <div class="ticker__list">
-      <div class="ticker__item" id="usdItem"><span id="usdPrice">USD-BRL: R$5,009</span></div>
-     </div>
-  </div></h4>
+	<h7>teste</h7> <h8>teste</h8>
+<!-- SimpleFX widget LIVE QUOTES BAR - START -->
+<div class="sfx-widget" id="sfx-live-quotes-bar"></div>
+<script type="text/javascript" src="https://widgets.simplefx.com/sfx-widget.js"></script>
+<script type="text/javascript">
+	sfx('liveQuotesBar', {
+		containerId: 'sfx-live-quotes-bar',
+		language: 'auto',
+		width: "100%",
+		height: "40px",
+		symbols: ["BTCUSD","GOOG.US","USDSEK","PETROBRA.BR","ITAU.BR","ITAU.BR","VALE.BR","VALE.BR","SUZANO.BR","SUZANO.BR","COSAN.BR","COSAN.BR","B3.BR","B3.BR","MAGALU.BR","MAGALU.BR"],
+		theme: "dark",
+		alignLogo: "left",
+		customElements: ["sessionChange"],
+
+	})
+</script>
+<!-- SimpleFX widget - END -->
 	
 		
   	<div id="consulta">
