--- a/src/main/resources/static/listaAnimais.html
+++ b/src/main/resources/static/listaAnimais.html
@@ -247,7 +247,7 @@ th {
 }
 
 tr:nth-child(even) {
-  background:#D3D3D3;
+  background:#EFEDED;
 }
 
 
@@ -343,6 +343,8 @@ h8{
 	position:absolute;
 	right: 0;
 }
+
+
 
   
 	</style>
